[package]
name = "const-tweaker"
version = "0.2.4-alpha.0"
authors = ["Thomas Versteeg <thomasversteeg@gmx.com>"]
license = "AGPL-3.0-or-later"
edition = "2018"
readme = "README.md"
repository = "https://github.com/tversteeg/const-tweaker"
documentation = "https://docs.rs/const-tweaker"
description = "Tweak constant variables live from a web GUI"
keywords = ["gamedev", "gui", "const"]
categories = ["game-development", "config", "development-tools", "rust-patterns"]

[workspace]
members = ["macro"]

[dependencies]
anyhow = "1.0.27"
async-std = "1.5.0"
const-tweaker-attribute = { path = "./macro", version = "0.2.0" }
dashmap = "3.7.0"
horrorshow = "0.8.3"
lazy_static = "1.4.0"
serde = { version = "1.0.105", features = ["derive"] }
tide = "0.6.0"
