[package]
name = "const-tweaker"
version = "0.2.7-alpha.0"
authors = ["Thomas Versteeg <thomasversteeg@gmx.com>"]
license = "AGPL-3.0-or-later"
edition = "2018"
readme = "README.md"
repository = "https://github.com/tversteeg/const-tweaker"
documentation = "https://docs.rs/const-tweaker"
description = "Tweak constant variables live from a web GUI"
keywords = ["gamedev", "gui", "const"]
categories = ["game-development", "config", "development-tools", "rust-patterns"]

[workspace]
members = ["macro"]

[dependencies]
anyhow = "1.0.28"
async-std = "1.5.0"
const-tweaker-attribute = { path = "./macro", version = "0.4.0" }
dashmap = "3.11.0"
horrorshow = "0.8.3"
lazy_static = "1.4.0"
serde = { version = "1.0.106", features = ["derive"] }
tide = "0.6.0"
